<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
tools:context=".SelectFlavor">

<data>
    <variable
        name="viewModel"
        type="com.enukesoftware.myapplication.viewmodels.OrderViewModel"/>

    <variable
        name="flavorFragment"
        type="com.enukesoftware.myapplication.SelectFlavor" />
</data>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/side_margin">

        <RadioGroup
            android:id="@+id/flavor_options"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RadioButton
                android:id="@+id/vanilla"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="@{viewModel.cupcakeFlavor.equals(@string/vanilla)}"
                android:onClick="@{() -> viewModel.setFlavor(@string/vanilla)}"
                android:text="@string/vanilla" />
            <!--  android:onClick="@{() -> viewModel.setFlavor(@string/vanilla)}"
                              -->
            <RadioButton
                android:id="@+id/chocolate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="@{viewModel.cupcakeFlavor.equals(@string/chocolate)}"
                android:onClick="@{() -> viewModel.setFlavor(@string/chocolate)}"
                android:text="@string/chocolate" />
            <!--  android:onClick="@{() -> viewModel.setFlavor(@string/chocolate)}"
                              -->
            <RadioButton
                android:id="@+id/red_velvet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="@{viewModel.cupcakeFlavor.equals(@string/red_velvet)}"
                android:onClick="@{() -> viewModel.setFlavor(@string/red_velvet)}"
                android:text="@string/red_velvet" />
            <!--Data Binding and LinerBinding   -->
            <RadioButton
                android:id="@+id/salted_caramel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="@{viewModel.cupcakeFlavor.equals(@string/salted_caramel)}"
                android:onClick="@{() -> viewModel.setFlavor(@string/salted_caramel)}"

                android:text="@string/salted_caramel" />
            <!--  android:onClick="@{() -> viewModel.setFlavor(@string/salted_caramel)}"
                              -->
            <RadioButton
                android:id="@+id/coffee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="@{viewModel.cupcakeFlavor.equals(@string/coffee)}"
                android:onClick="@{() -> viewModel.setFlavor(@string/coffee)}"
                android:text="@string/coffee" />
        </RadioGroup>
        <!--     android:onClick="@{() -> viewModel.setFlavor(@string/coffee)}"
                        -->
        <View
            android:id="@+id/divider"
            style="@style/Widget.Cupcake.Divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/side_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/flavor_options" />

        <TextView
            android:id="@+id/subtotal"
            style="@style/Widget.Cupcake.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/side_margin"
            android:text="@{@string/subtotal_price(viewModel.orderPrice)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider"
            tools:text="Subtotal $0.00" />

        <Button
            android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/side_margin"
            android:text="@string/next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:onClick="@{() -> flavorFragment.goToNextScreen()}"
            app:layout_constraintTop_toBottomOf="@id/subtotal" />
<!--
            android:onClick="@{() -> flavorFragment.goToNextScreen()}"-->
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
</layout>