<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/startFragment">
    <fragment
        android:id="@+id/startFragment"
        android:name="com.enukesoftware.myapplication.StartFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_start" >
<!--        <action-->
<!--            android:id="@+id/action_startFragment_to_summaryFragment2"-->
<!--            app:destination="@id/summaryFragment" />-->
        <action
            android:id="@+id/action_startFragment_to_flavorFragment"
            app:destination="@id/selectFlavorFragment" />
    </fragment>

    <fragment
        android:id="@+id/selectFlavorFragment"
        android:name="com.enukesoftware.myapplication.SelectFlavor"
        android:label="@string/choose_flavor"
        tools:layout="@layout/fragment_select_flavor" >
        <action
            android:id="@+id/action_flavorFragment_to_pickupFragment"
            app:destination="@id/pickupFragment" />
    </fragment>

    <fragment
        android:id="@+id/pickupFragment"
        android:name="com.enukesoftware.myapplication.PickupFragment"
        android:label="@string/choose_pickup_date"
        tools:layout="@layout/fragment_pickup" >
        <action
            android:id="@+id/action_pickupFragment_to_summaryFragment"
            app:destination="@id/summaryFragment" />
    </fragment>

    <fragment
        android:id="@+id/summaryFragment"
        android:name="com.enukesoftware.myapplication.SummaryFragment"
        android:label="@string/order_summary"
        tools:layout="@layout/fragment_summary" >
<!--        <action-->
<!--            android:id="@+id/action_summaryFragment_to_flavorFragment"-->
<!--            app:destination="@id/flavorFragment" />-->
<!--        <action-->
<!--            android:id="@+id/action_summaryFragment_to_pickupFragment"-->
<!--            app:destination="@id/pickupFragment" />-->
    </fragment>
<!--    <fragment-->
<!--        android:id="@+id/FirstFragment"-->
<!--        android:name="com.enukesoftware.myapplication.FirstFragment"-->
<!--        android:label="@string/first_fragment_label"-->
<!--        tools:layout="@layout/fragment_first">-->

<!--        <action-->
<!--            android:id="@+id/action_FirstFragment_to_SecondFragment"-->
<!--            app:destination="@id/SecondFragment" />-->
<!--    </fragment>-->
<!--    <fragment-->
<!--        android:id="@+id/SecondFragment"-->
<!--        android:name="com.enukesoftware.myapplication.SecondFragment"-->
<!--        android:label="@string/second_fragment_label"-->
<!--        tools:layout="@layout/fragment_second">-->

<!--        <action-->
<!--            android:id="@+id/action_SecondFragment_to_FirstFragment"-->
<!--            app:destination="@id/FirstFragment" />-->
<!--    </fragment>-->
<!--    <fragment-->
<!--        android:id="@+id/startFragment"-->
<!--        android:name="com.enukesoftware.myapplication.StartFragment"-->
<!--        android:label="fragment_start"-->
<!--        tools:layout="@layout/fragment_start" />-->
<!--    <fragment-->
<!--        android:id="@+id/summaryFragment"-->
<!--        android:name="com.enukesoftware.myapplication.SummaryFragment"-->
<!--        android:label="fragment_summary"-->
<!--        tools:layout="@layout/fragment_summary" />-->
<!--    <fragment-->
<!--        android:id="@+id/pickupFragment"-->
<!--        android:name="com.enukesoftware.myapplication.PickupFragment"-->
<!--        android:label="fragment_pickup"-->
<!--        tools:layout="@layout/fragment_pickup" />-->
<!--    <fragment-->
<!--        android:id="@+id/flavorFragment"-->
<!--        android:name="com.enukesoftware.myapplication.FlavorFragment"-->
<!--        android:label="fragment_flavor"-->
<!--        tools:layout="@layout/fragment_flavor" />-->
</navigation>